{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 6,
  "lineage": "7e035920-fde6-3c4c-245b-cb6597f35783",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Scenario1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:510935893931:security-group/sg-06690dfa197ad0952",
            "description": "Ingress",
            "egress": [],
            "id": "sg-06690dfa197ad0952",
            "ingress": [],
            "name": "SG with all port and all IP.",
            "name_prefix": "",
            "owner_id": "510935893931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Scenario1"
            },
            "tags_all": {
              "Name": "Scenario1"
            },
            "timeouts": null,
            "vpc_id": "vpc-481b202f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-969250119",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06690dfa197ad0952",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Scenario1"
          ]
        }
      ]
    }
  ]
}